@@ -17,7 +17,7 @@ public class Position {
     }
 
     public Pair<Integer, Integer> ToGridPosition() {
-        return new Pair<>(Math.clamp((int) ((x + TILE_SIZE / 2.0) / TILE_SIZE), 0, getMap1()[0].length - 1), Math.clamp((int) ((y + TILE_SIZE / 2.0) / TILE_SIZE), 0, getMap1().length - 1));
+        return new Pair<>(Math.max(0, (int) ((x + TILE_SIZE / 2.0) / TILE_SIZE)), Math.max(0, (int) ((y + TILE_SIZE / 2.0) / TILE_SIZE)));
     }
 
     public Pair<Integer, Integer> ToScreenPosition() {
